--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
 
       <table>
-        <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a><caption>
+        <a href = "https://pigeon-ndb.com/results/"><caption>Hall of Fame Marathon Records</caption></a>
       <thead>
         <tr>
           <th scope="col" class="colhead">Position</th>
