--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <body>  
    <main>
     <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
-    <a href = "https://pigeon-ndb.com/results/"><caption>Hall of Fame Marathon Records</caption></a>
+    <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
       <table>
     
       <thead>
