--- a/index.html
+++ b/index.html
@@ -33,9 +33,8 @@
   <body>  
    <main>
     <h1>AU National Old Bird Hall of Fame Marathon Distance</h1>
-    <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a></caption>
       <table>
-    
+            <caption><a href = "https://pigeon-ndb.com/results/">Hall of Fame Marathon Records</a><caption>
       <thead>
         <tr>
           <th scope="col" class="colhead">Position</th>
